# dsforward

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  FIXES.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  start_server.py
.github/workflows/: build.yml
dsf/: __init__.py  config.py  main.py  proxy.py
